--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -28,7 +28,12 @@
             <li><a href="disciplina">Disciplina</a></li>
             <li><a href="sporty">Sporty</a></li>
             <li><a href="chyba">Chyba</a></li>
+            <li><a href="importcsv">Import žáku do db</a></li>
+            <li><a href="turnaj">Vytvoreni Turnaje</a></li>
+            <li><a href="pridelenidisciplin">Přidelení žáku k disciplínam</a></li>
         </ul>
+
+
 
     <div class="zpravy">
         <?php foreach ($zpravy as $zprava) { ?>
