--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -31,6 +31,9 @@
             <li><a href="importcsv">Import žáku do db</a></li>
             <li><a href="turnaj">Vytvoreni Turnaje</a></li>
             <li><a href="pridelenidisciplin">Přidelení žáku k disciplínam</a></li>
+            <li><a href="uzivatele">Uživatelé</a></li>
+            <li><a href="tridy">Třídy</a></li>
+            <li><a href="ucastnik">Účastník</a></li>
         </ul>
 
 
