--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -24,16 +24,35 @@
     </header>
     <nav>
         <ul>
-            <li><a href="uvod">Úvod</a></li>
+            <h2>Pridavani do databaze</h2>
             <li><a href="disciplina">Disciplina</a></li>
             <li><a href="sporty">Sporty</a></li>
-            <li><a href="chyba">Chyba</a></li>
+            <li><a href="uroven">Uroven</a></li>
+            <li><a href="ucastnik">Účastník</a></li>
+            <li><a href="pozice">Pozice</a></li>
+            <li><a href="uroven">Uroven</a></li>
+            <li><a href="discucast">disc_ucaas</a></li>
+            <li><a href="soupiska">Soupiska</a></li>      
+        </ul>
+
+        <ul>
+            <h2>Importy</h2>
             <li><a href="importcsv">Import žáku do db</a></li>
+            <li><a href="tridy">Třídy</a></li>
+        </ul>
+        <ul>
+            <h2>Ostatni</h2>
             <li><a href="turnaj">Vytvoreni Turnaje</a></li>
             <li><a href="pridelenidisciplin">Přidelení žáku k disciplínam</a></li>
-            <li><a href="uzivatele">Uživatelé</a></li>
-            <li><a href="tridy">Třídy</a></li>
-            <li><a href="ucastnik">Účastník</a></li>
+        </ul>
+        <ul>
+            <h2>Vypisy</h2>
+            <li><a href="uzivatel">Učitelé</a></li>
+        </ul>
+
+        <ul>
+            <h2>Ldap</h2>
+            <li><a href="ldap">ldap</a></li>
         </ul>
 
 
