Slučení souboru Do-Fabisze

--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -24,15 +24,16 @@
     </header>
     <nav>
         <ul>
+            <li><a href="uvod">Úvod</a></li>
             <h2>Pridavani do databaze</h2>
             <li><a href="disciplina">Disciplina</a></li>
             <li><a href="sporty">Sporty</a></li>
-            <li><a href="uroven">Uroven</a></li>
+            <li><a href="chyba">Chyba</a></li>
             <li><a href="ucastnik">Účastník</a></li>
             <li><a href="pozice">Pozice</a></li>
             <li><a href="uroven">Uroven</a></li>
             <li><a href="discucast">disc_ucaas</a></li>
-            <li><a href="soupiska">Soupiska</a></li>      
+            <li><a href="soupiska">Soupiska</a></li> 
         </ul>
 
         <ul>
@@ -42,7 +43,7 @@
         </ul>
         <ul>
             <h2>Ostatni</h2>
-            <li><a href="turnaj">Vytvoreni Turnaje</a></li>
+            <li><a href="akce">Vytvoreni Akcí</a></li>
             <li><a href="pridelenidisciplin">Přidelení žáku k disciplínam</a></li>
         </ul>
         <ul>
@@ -54,8 +55,6 @@
             <h2>Ldap</h2>
             <li><a href="ldap">ldap</a></li>
         </ul>
-
-
 
     <div class="zpravy">
         <?php foreach ($zpravy as $zprava) { ?>
