--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -33,7 +33,8 @@
             <li><a href="pozice">Pozice</a></li>
             <li><a href="uroven">Uroven</a></li>
             <li><a href="discucast">disc_ucaas</a></li>
-            <li><a href="soupiska">Soupiska</a></li> 
+            <li><a href="soupiska">Soupiska</a></li>
+            <li><a href="sportuje">Sportuje</a></li> 
         </ul>
 
         <ul>
