pridani sportovcu do rozlozeni

--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -50,6 +50,7 @@
         <ul>
             <h2>Vypisy</h2>
             <li><a href="uzivatel">Učitelé</a></li>
+            <li><a href="sportovci">Sportovci</a></li>
         </ul>
 
         <ul>
