--- a/pohledy/sportovci.phtml
+++ b/pohledy/sportovci.phtml
@@ -18,10 +18,10 @@
         <thead>
             <tr>
                 
-                <th>ID Studenta</th>
-                <th>ID Disciplíny</th>
-                <th>ID Pozice</th>
-                <th>ID Úrovně</th>
+                <th>Jméno Píjmení</th>
+                <th>Disciplína</th>
+                <th>Pozice</th>
+                <th>Úroveň</th>
                 <th>Tým</th>
                 <th>Rekord</th>
             </tr>
