--- a/pohledy/uzivatele.phtml
+++ b/pohledy/uzivatele.phtml
@@ -1,7 +1,7 @@
-<h1>wagwan</h1>
+<h1>Všichni učitele</h1>
 
 <?php if (isset($this->data['ucitele']) && !empty($this->data['ucitele'])): ?>
-    <h2>Všechny učitele</h2>
+    
     <ul>
         <?php foreach ($this->data['ucitele'] as $ucitel): ?>
             <?php if ($ucitel !== null): ?>
