--- a/pohledy/akce.phtml
+++ b/pohledy/akce.phtml
@@ -22,8 +22,8 @@
     <label for="datum_zahajeni">Datum zahajeni: </label>
     <input type="date" name="datum_zahajeni" >
     <!-- Delka dni -->   
-    <label for="delka_dni">Delka dni: </label>
-    <input type="number" name="delka_dni" >
+    <label for="datum_konce">Delka dni: </label>
+    <input type="date" name="datum_konce" >
     <!-- Misto konani -->
     <label for="misto_kon">Misto konani: </label>
     <input type="text" name="misto_kon" >
@@ -51,8 +51,8 @@
                 <label for="datum_zahajeni">Datum zahajeni: </label>
                 <input type="date" name="datum_zahajeni" value="<?php echo $akce['datum_zahajeni']; ?>">
                 <!-- Delka dni -->   
-                <label for="delka_dni">Delka dni: </label>
-                <input type="number" name="delka_dni" value="<?php echo $akce['delka_dni']; ?>">
+                <label for="datum_konce">Delka dni: </label>
+                <input type="date" name="datum_konce" value="<?php echo $akce['datum_konce']; ?>">
                 <!-- Misto konani -->
                 <label for="misto_kon">Misto konani: </label>
                 <input type="text" name="misto_kon" value="<?php echo $akce['misto_kon']; ?>">
